tool/tests/snapshots/dotnet_target__almost_properties@RawFfiResultU64Void.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using SomeOrg.SomeModule;
using We.Also.Need.This;
using OurOrg.OurRustLib.Diplomat;
#pragma warning restore 0105

namespace OurOrg.OurRustLib.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct FfiResultU64Void
{
#if __IOS__
    private const string NativeLib = "libmylib.framework/libmylib";
#else
    private const string NativeLib = "mylib";
#endif

    [StructLayout(LayoutKind.Explicit)]
    private unsafe struct InnerUnion
    {
        [FieldOffset(0)]
        internal ulong ok;
    }

    private InnerUnion _inner;

    [MarshalAs(UnmanagedType.U1)]
    public bool isOk;

    public unsafe ulong Ok
    {
        get
        {
            return _inner.ok;
        }
    }

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "result_u64_unit_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(IntPtr self);
}

