tool/tests/snapshots/dotnet_target__error_handling@MyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyStruct: IDisposable
{
    private unsafe Raw.MyStruct* _inner;

    /// <summary>
    /// Creates a managed <c>MyStruct</c> from a raw handle.
    /// </summary>
    /// <remarks>
    /// Safety: you should not build two managed objects using the same raw handle (may causes use-after-free and double-free).
    /// <br/>
    /// This constructor assumes the raw struct is allocated on Rust side.
    /// If implemented, the custom Drop implementation on Rust side WILL run on destruction.
    /// </remarks>
    public unsafe MyStruct(Raw.MyStruct* handle)
    {
        _inner = handle;
    }

    /// <exception cref="MyModuleErrorException"></exception>
    public uint Foo()
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            IntPtr resultPtr = Raw.MyStruct.Foo(_inner);
            Raw.FfiResultU32MyModuleError result = Marshal.PtrToStructure<Raw.FfiResultU32MyModuleError>(resultPtr);
            Raw.FfiResultU32MyModuleError.Destroy(resultPtr);
            if (!result.isOk)
            {
                throw new MyModuleErrorException((MyModuleError)result.Err);
            }
            uint retVal = result.Ok;
            return retVal;
        }
    }

    /// <exception cref="MyModuleOpaqueErrorException"></exception>
    public uint Bar()
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            IntPtr resultPtr = Raw.MyStruct.Bar(_inner);
            Raw.FfiResultCharMyModuleOpaqueError result = Marshal.PtrToStructure<Raw.FfiResultCharMyModuleOpaqueError>(resultPtr);
            Raw.FfiResultCharMyModuleOpaqueError.Destroy(resultPtr);
            if (!result.isOk)
            {
                throw new MyModuleOpaqueErrorException(new MyModuleOpaqueError(result.Err));
            }
            uint retVal = result.Ok;
            return retVal;
        }
    }

    /// <exception cref="DiplomatOpaqueException"></exception>
    public void Baz()
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            IntPtr resultPtr = Raw.MyStruct.Baz(_inner);
            Raw.FfiResultVoidVoid result = Marshal.PtrToStructure<Raw.FfiResultVoidVoid>(resultPtr);
            Raw.FfiResultVoidVoid.Destroy(resultPtr);
            if (!result.isOk)
            {
                throw new DiplomatOpaqueException();
            }
        }
    }

    /// <summary>
    /// Returns the underlying raw handle.
    /// </summary>
    public unsafe Raw.MyStruct* AsFFI()
    {
        return _inner;
    }

    /// <summary>
    /// Destroys the underlying object immediately.
    /// </summary>
    public void Dispose()
    {
        unsafe
        {
            if (_inner == null)
            {
                return;
            }

            Raw.MyStruct.Destroy(_inner);
            _inner = null;

            GC.SuppressFinalize(this);
        }
    }

    ~MyStruct()
    {
        Dispose();
    }
}

