tool/tests/snapshots/dotnet_target__error_handling@RawFfiResultCharMyModuleOpaqueError.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct FfiResultCharMyModuleOpaqueError
{
#if __IOS__
    private const string NativeLib = "librust.framework/librust";
#else
    private const string NativeLib = "rust";
#endif

    [StructLayout(LayoutKind.Explicit)]
    private unsafe struct InnerUnion
    {
        [FieldOffset(0)]
        internal uint ok;
        [FieldOffset(0)]
        internal MyModuleOpaqueError err;
    }

    private InnerUnion _inner;

    [MarshalAs(UnmanagedType.U1)]
    public bool isOk;

    public unsafe uint Ok
    {
        get
        {
            return _inner.ok;
        }
    }

    public unsafe MyModuleOpaqueError Err
    {
        get
        {
            return _inner.err;
        }
    }

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "result_char_MyModuleOpaqueError_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(IntPtr self);
}

